--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -8,7 +8,10 @@
 	"exports": {
 		".": "./index.ts"
 	},
-	"devDependencies": {
+	"scripts": {
+		"check-types": "tsc --noEmit"
+	},
+	"dependencies": {
 		"@types/bun": "latest"
 	},
 	"peerDependencies": {
