--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,6 +8,9 @@
 	"exports": {
 		".": "./index.ts"
 	},
+	"scripts": {
+		"check-types": "tsc --noEmit"
+	},
 	"dependencies": {
 		"@drivebase/utils": "workspace:*",
 		"zod": "^3.22.4"
