--- a/packages/s3/package.json
+++ b/packages/s3/package.json
@@ -8,6 +8,9 @@
 	"exports": {
 		".": "./index.ts"
 	},
+	"scripts": {
+		"check-types": "tsc --noEmit"
+	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.884.0",
 		"@aws-sdk/s3-request-presigner": "^3.884.0",
