--- a/packages/telegram/package.json
+++ b/packages/telegram/package.json
@@ -8,6 +8,9 @@
 	"exports": {
 		".": "./index.ts"
 	},
+	"scripts": {
+		"check-types": "tsc --noEmit"
+	},
 	"dependencies": {
 		"@drivebase/core": "workspace:*",
 		"telegram": "^2.26.22",
