--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,9 @@
 	},
 	"dependencies": {
 		"@base-ui/react": "^1.1.0",
+		"@dnd-kit/core": "^6.3.1",
+		"@dnd-kit/modifiers": "^9.0.0",
+		"@dnd-kit/utilities": "^3.2.2",
 		"@drivebase/utils": "workspace:*",
 		"@fontsource-variable/geist": "^5.2.8",
 		"@hookform/resolvers": "^5.2.2",
