--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,14 +4,16 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite --port 3000",
-		"build": "bun run codegen && vite build && tsc",
+		"build": "bun run codegen && bun run i18n:compile && vite build && tsc",
 		"preview": "vite preview",
 		"test": "vitest run",
 		"format": "biome format",
 		"lint": "biome lint",
 		"check": "biome check",
 		"check-types": "tsc --noEmit",
-		"codegen": "bunx graphql-codegen"
+		"codegen": "bunx graphql-codegen",
+		"i18n:extract": "lingui extract",
+		"i18n:compile": "lingui compile"
 	},
 	"dependencies": {
 		"@base-ui/react": "^1.1.0",
@@ -21,6 +23,8 @@
 		"@drivebase/utils": "workspace:*",
 		"@fontsource-variable/geist": "^5.2.8",
 		"@hookform/resolvers": "^5.2.2",
+		"@lingui/core": "^5.9.1",
+		"@lingui/react": "^5.9.1",
 		"@radix-ui/react-checkbox": "^1.3.3",
 		"@remixicon/react": "^4.9.0",
 		"@tailwindcss/vite": "^4.0.6",
@@ -54,6 +58,10 @@
 		"@iconify-json/cib": "^1.2.3",
 		"@iconify-json/material-symbols": "^1.2.54",
 		"@iconify/tailwind4": "^1.2.1",
+		"@lingui/cli": "^5.9.1",
+		"@lingui/format-json": "^5.9.1",
+		"@lingui/macro": "^5.9.1",
+		"@lingui/vite-plugin": "^5.9.1",
 		"@tanstack/devtools-vite": "^0.3.11",
 		"@tanstack/react-devtools": "^0.7.0",
 		"@tanstack/react-router-devtools": "^1.132.0",
@@ -63,6 +71,7 @@
 		"@types/react": "^19.2.0",
 		"@types/react-dom": "^19.2.0",
 		"@vitejs/plugin-react": "^5.0.4",
+		"babel-plugin-macros": "^3.1.0",
 		"jsdom": "^27.0.0",
 		"typescript": "^5.7.2",
 		"vite": "^7.1.7",
