feat: add render configuration and environment variables for deployment

--- a/.release-it.json
+++ b/.release-it.json
@@ -18,6 +18,10 @@
 					"file": "docker/compose.prod.yaml",
 					"type": "text/plain"
 				},
+				{
+					"file": "render.yaml",
+					"type": "text/plain"
+				},
 				"apps/www/components/landing/hero.tsx"
 			]
 		}
