--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"packages/*"
 	],
 	"scripts": {
+		"api": "bun --env-file=.env.local turbo run --filter=@drivebase/api dev",
 		"build": "bun --env-file=.env turbo run build --filter=@drivebase/api --filter=web",
 		"dev": "bun --env-file=.env.local turbo run dev --parallel --filter=@drivebase/api --filter=web",
 		"dev:local": "bun --env-file=.env.local turbo run dev --parallel --filter=@drivebase/api --filter=web",
