--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -24,11 +24,11 @@
 		"@drivebase/s3": "workspace:*",
 		"@drivebase/telegram": "workspace:*",
 		"@drivebase/webdav": "workspace:*",
-		"telegram": "^2.26.22",
 		"@graphql-tools/graphql-file-loader": "^8.0.5",
 		"@graphql-tools/load": "^8.0.5",
 		"@graphql-tools/schema": "^10.0.31",
 		"bcryptjs": "^3.0.3",
+		"bullmq": "^5.69.3",
 		"drizzle-orm": "^0.45.1",
 		"graphql": "^16.9.0",
 		"graphql-yoga": "^5.11.1",
@@ -36,6 +36,7 @@
 		"jose": "^6.1.3",
 		"pino": "^10.3.1",
 		"pino-pretty": "^13.1.3",
+		"telegram": "^2.26.22",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
