refactor(api): migrate to Hono framework with provider plugin system

--- a/packages/telegram/package.json
+++ b/packages/telegram/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"@drivebase/core": "workspace:*",
+		"hono": "^4.7.0",
 		"telegram": "^2.26.22",
 		"zod": "^3.22.4"
 	},
