--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,6 +32,7 @@
 		"drizzle-orm": "^0.45.1",
 		"graphql": "^16.9.0",
 		"graphql-yoga": "^5.11.1",
+		"hono": "^4.7.0",
 		"ioredis": "^5.9.2",
 		"jose": "^6.1.3",
 		"pino": "^10.3.1",
