fix: add getPublicApiBaseUrl function for resolving public API base URL

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ NODE_ENV=development
 
 # API server
 PORT=4000
+# Set to your public API URL in production (e.g. https://app.example.com)
 API_BASE_URL=http://localhost:4000
 CORS_ORIGIN=http://localhost:3000
 
