chore: update biome configuration and improve rule form handling

--- a/apps/web/biome.json
+++ b/apps/web/biome.json
@@ -16,5 +16,17 @@
 	},
 	"files": {
 		"includes": ["**", "!src/locales"]
-	}
+	},
+	"overrides": [
+		{
+			"includes": ["src/features/rules/components/ConditionGroupEditor.tsx"],
+			"linter": {
+				"rules": {
+					"suspicious": {
+						"noArrayIndexKey": "off"
+					}
+				}
+			}
+		}
+	]
 }
