--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -85,6 +85,9 @@ jobs:
       - name: Biome check
         run: bunx biome check .
 
+      - name: Generate types
+        run: bun --filter web run generate
+
       - name: Type check
         run: bunx turbo run check-types
 
