--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -86,7 +86,7 @@ jobs:
         run: bunx biome check .
 
       - name: Generate types
-        run: bun --filter web run generate
+        run: bun --filter web generate
 
       - name: Type check
         run: bunx turbo run check-types
