--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -1,19 +1,17 @@
 {
 	"$schema": "https://ui.shadcn.com/schema.json",
-	"style": "radix-mira",
-	"rsc": false,
+	"style": "radix-lyra",
+	"rsc": true,
 	"tsx": true,
 	"tailwind": {
 		"config": "",
-		"css": "src/index.css",
+		"css": "app/globals.css",
 		"baseColor": "neutral",
 		"cssVariables": true,
 		"prefix": ""
 	},
-	"iconLibrary": "remixicon",
+	"iconLibrary": "lucide",
 	"rtl": false,
-	"menuColor": "inverted",
-	"menuAccent": "bold",
 	"aliases": {
 		"components": "@/components",
 		"utils": "@/lib/utils",
@@ -21,7 +19,7 @@
 		"lib": "@/lib",
 		"hooks": "@/hooks"
 	},
-	"registries": {
-		"@reui": "https://reui.io/r/{name}.json"
-	}
+	"menuColor": "default",
+	"menuAccent": "subtle",
+	"registries": {}
 }
