--- a/docker/compose.prod.yaml
+++ b/docker/compose.prod.yaml
@@ -23,6 +23,19 @@ services:
         condition: service_healthy
     ports:
       - '3000:3000'
+
+  updater:
+    image: ghcr.io/drivebase/updater:v2.1.3
+    container_name: drivebase_updater
+    restart: unless-stopped
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      UPDATER_SECRET: >-
+        ${UPDATER_SECRET:-default-updater-secret-change-in-production}
+      APP_CONTAINER_NAME: drivebase_app
+      APP_IMAGE: ghcr.io/drivebase/drivebase
+
   db:
     image: postgres:17-alpine
     container_name: drivebase_db
@@ -42,6 +55,7 @@ services:
       - '5432:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
+
   redis:
     image: redis:7-alpine
     container_name: redis
@@ -56,16 +70,6 @@ services:
       retries: 10
     ports:
       - '6379:6379'
-  updater:
-    image: ghcr.io/drivebase/updater:latest
-    container_name: drivebase_updater
-    restart: unless-stopped
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    environment:
-      UPDATER_SECRET: >-
-        ${UPDATER_SECRET:-default-updater-secret-change-in-production}
-      APP_CONTAINER_NAME: drivebase_app
-      APP_IMAGE: ghcr.io/drivebase/drivebase
+
 volumes:
   postgres_data: null
