--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	],
 	"scripts": {
 		"api": "bun --env-file=.env.local turbo run --filter=@drivebase/api dev",
+		"generate": "bun --filter web generate",
 		"build": "bun --env-file=.env turbo run build --filter=@drivebase/api --filter=web",
 		"dev": "bun --env-file=.env.local turbo run dev --parallel --filter=@drivebase/api --filter=web",
 		"dev:local": "bun --env-file=.env.local turbo run dev --parallel --filter=@drivebase/api --filter=web",
