fix: update database script filters to use correct package name

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
 		"test": "bun test --env-file=.env.test",
 		"test:watch": "bun test --env-file=.env.test --watch",
 		"check-types": "turbo run check-types",
-		"db:generate": "bun run --filter=db generate",
-		"db:migrate": "bun run --filter=db migrate",
-		"db:studio": "bun run --filter=db studio",
+		"db:generate": "bun run --filter=@drivebase/db generate",
+		"db:migrate": "bun run --filter=@drivebase/db migrate",
+		"db:studio": "bun run --filter=@drivebase/db studio",
 		"release": "release-it",
 		"prepare": "husky",
 		"format": "biome format --write",
