--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
 		"packages/*"
 	],
 	"scripts": {
-		"api": "bun --env-file=.env.local turbo run --filter=api dev",
 		"generate": "bun --filter web generate && bun --filter api codegen",
-		"build": "bun --env-file=.env turbo run build --filter=api --filter=web",
 		"dev": "bun --env-file=.env.local turbo run dev --parallel --filter=api --filter=web",
-		"dev:local": "bun --env-file=.env.local turbo run dev --parallel --filter=api --filter=web",
+		"dev:api": "bun --env-file=.env.local turbo run --filter=api dev",
+		"dev:web": "bun --env-file=.env.local turbo run --filter=web dev",
 		"test": "bun test --env-file=.env.test",
-		"test:watch": "bun test --env-file=.env.test --watch",
 		"check-types": "turbo run check-types",
 		"db:generate": "bun run --filter=@drivebase/db generate",
 		"db:migrate": "bun run --filter=@drivebase/db migrate",
