feat: add nextcloud support

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,6 +21,7 @@
 		"@drivebase/ftp": "workspace:*",
 		"@drivebase/google-drive": "workspace:*",
 		"@drivebase/local": "workspace:*",
+		"@drivebase/nextcloud": "workspace:*",
 		"@drivebase/s3": "workspace:*",
 		"@drivebase/telegram": "workspace:*",
 		"@drivebase/webdav": "workspace:*",
