--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -67,6 +67,7 @@
 		"@tanstack/devtools-vite": "^0.3.11",
 		"@tanstack/react-devtools": "^0.7.0",
 		"@tanstack/react-router-devtools": "^1.132.0",
+		"@tanstack/router-cli": "^1.162.2",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/react": "^16.2.0",
 		"@types/node": "^22.10.2",
