feat: add nextcloud provider (#91)
* fix: update database script filters to use correct package name

* fix: update script commands in package.json

* feat: add nextcloud support

* chore: format and update biome version

* refactor: update entries and remove obsolete migrations

* chore: recreate migrations

* chore: recreate migrations

* chore: add build script for web application

* chore: format

* chore: add biome ignore for breadcrumb

* chore: add missing tsr package

* chore: add separate type generation steps for web and api

* chore: separate lint and type check jobs in CI workflow

* fix: pin both bullmq to 5.69.3 and ioredis to 5.9.2

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -62,7 +62,7 @@ jobs:
         run: bun test
 
   lint:
-    name: Lint & Typecheck
+    name: Lint
     needs: install
     runs-on: ubuntu-latest
     steps:
@@ -85,8 +85,32 @@ jobs:
       - name: Biome check
         run: bunx biome check .
 
-      - name: Generate types
+  typecheck:
+    name: Type Check
+    needs: install
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Restore node_modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            node_modules
+            apps/*/node_modules
+            packages/*/node_modules
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+
+      - name: Generate types (web)
         run: bun --filter web generate
+
+      - name: Generate types (api)
+        run: bun --filter api codegen
 
       - name: Type check
         run: bunx turbo run check-types
