--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,6 +21,7 @@
 		"@drivebase/ftp": "workspace:*",
 		"@drivebase/google-drive": "workspace:*",
 		"@drivebase/local": "workspace:*",
+		"@drivebase/nextcloud": "workspace:*",
 		"@drivebase/s3": "workspace:*",
 		"@drivebase/telegram": "workspace:*",
 		"@drivebase/webdav": "workspace:*",
@@ -28,12 +29,12 @@
 		"@graphql-tools/load": "^8.0.5",
 		"@graphql-tools/schema": "^10.0.31",
 		"bcryptjs": "^3.0.3",
-		"bullmq": "^5.69.3",
+		"bullmq": "5.69.3",
 		"drizzle-orm": "^0.45.1",
 		"graphql": "^16.9.0",
 		"graphql-yoga": "^5.11.1",
 		"hono": "^4.7.0",
-		"ioredis": "^5.9.2",
+		"ioredis": "5.9.2",
 		"jose": "^6.1.3",
 		"pino": "^10.3.1",
 		"pino-pretty": "^13.1.3",
