--- a/package.json
+++ b/package.json
@@ -8,17 +8,16 @@
 		"packages/*"
 	],
 	"scripts": {
-		"api": "bun --env-file=.env.local turbo run --filter=api dev",
 		"generate": "bun --filter web generate && bun --filter api codegen",
-		"build": "bun --env-file=.env turbo run build --filter=api --filter=web",
 		"dev": "bun --env-file=.env.local turbo run dev --parallel --filter=api --filter=web",
-		"dev:local": "bun --env-file=.env.local turbo run dev --parallel --filter=api --filter=web",
+		"build": "bun turbo run build --filter=web",
+		"dev:api": "bun --env-file=.env.local turbo run --filter=api dev",
+		"dev:web": "bun --env-file=.env.local turbo run --filter=web dev",
 		"test": "bun test --env-file=.env.test",
-		"test:watch": "bun test --env-file=.env.test --watch",
 		"check-types": "turbo run check-types",
-		"db:generate": "bun run --filter=db generate",
-		"db:migrate": "bun run --filter=db migrate",
-		"db:studio": "bun run --filter=db studio",
+		"db:generate": "bun run --filter=@drivebase/db generate",
+		"db:migrate": "bun run --filter=@drivebase/db migrate",
+		"db:studio": "bun run --filter=@drivebase/db studio",
 		"release": "release-it",
 		"prepare": "husky",
 		"format": "biome format --write",
