--- a/compose.yaml
+++ b/compose.yaml
@@ -18,6 +18,8 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+    volumes:
+      - drivebase_data:/app/data
     ports:
       - "3000:3000"
 
@@ -53,3 +55,4 @@ services:
 
 volumes:
   postgres_data:
+  drivebase_data:
