--- a/docker/compose.prod.yaml
+++ b/docker/compose.prod.yaml
@@ -60,7 +60,7 @@ services:
 
   redis:
     image: redis:7-alpine
-    container_name: redis
+    container_name: drivebase_redis
     restart: unless-stopped
     healthcheck:
       test:
