feat: add darkibox provider

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
 	},
 	"dependencies": {
 		"@drivebase/core": "workspace:*",
+		"@drivebase/darkibox": "workspace:*",
 		"@drivebase/db": "workspace:*",
 		"@drivebase/dropbox": "workspace:*",
 		"@drivebase/ftp": "workspace:*",
