--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,6 +35,7 @@
 		"axios": "^1.13.5",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"graphql": "^16.12.0",
 		"graphql-sse": "^2.6.0",
