--- a/docker/compose.prod.yaml
+++ b/docker/compose.prod.yaml
@@ -39,7 +39,7 @@ services:
       APP_IMAGE: ghcr.io/drivebase/drivebase
 
   db:
-    image: postgres:17-alpine
+    image: pgvector/pgvector:pg17
     container_name: drivebase_db
     restart: unless-stopped
     environment:
