--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,4 @@ VITE_PUBLIC_API_URL=http://localhost:4000/graphql
 AI_INFERENCE_URL=http://localhost:8010
 # AI_INFERENCE_TOKEN=
 # AI_MODELS_DIR=./.drivebase/models
+AI_MAX_FILE_SIZE_MB=50
