chore: refactor ai-inference service to use Docker build context and add Dockerfile

--- a/compose.yaml
+++ b/compose.yaml
@@ -57,13 +57,12 @@ services:
       - "6379:6379"
 
   ai-inference:
-    image: python:3.12-slim
+    build:
+      context: .
+      dockerfile: services/ai-inference/Dockerfile
     container_name: drivebase_ai_inference
     restart: unless-stopped
     working_dir: /srv/ai-inference
-    command: >
-      sh -c "pip install --no-cache-dir -r requirements.txt &&
-      uvicorn app:app --host 0.0.0.0 --port 8010"
     environment:
       AI_MODELS_DIR: /app/data/ai-models
     volumes:
