--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,9 @@ ENCRYPTION_KEY=your-encryption-key-minimum-32-characters-long-change-this-in-pro
 # Web client
 # Public API URL used by the web app.
 VITE_PUBLIC_API_URL=http://localhost:4000/graphql
+
+# AI inference service (optional)
+AI_INFERENCE_URL=http://localhost:8010
+# AI_INFERENCE_TOKEN=
+# AI_MODELS_DIR=./.drivebase/models
+AI_MAX_FILE_SIZE_MB=50
