--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -12,6 +12,10 @@
 		"moduleResolution": "bundler",
 		"allowImportingTsExtensions": true,
 		"verbatimModuleSyntax": true,
+		"baseUrl": ".",
+		"paths": {
+			"@/*": ["./*"]
+		},
 		"noEmit": true,
 
 		// Best practices
