--- a/services/ai-inference/Dockerfile
+++ b/services/ai-inference/Dockerfile
@@ -13,10 +13,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/*
 
-COPY services/ai-inference/requirements.txt ./requirements.txt
+COPY requirements.txt ./requirements.txt
 RUN pip install -r requirements.txt
 
-COPY services/ai-inference ./
+COPY . ./
 
 EXPOSE 8010
 
