fix: add editor settings for typescriptreact and json to enforce biome fixes on save

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,15 @@
 		"editor.codeActionsOnSave": {
 			"source.fixAll.biome": "explicit"
 		}
+	},
+	"[typescriptreact]": {
+		"editor.codeActionsOnSave": {
+			"source.fixAll.biome": "explicit"
+		}
+	},
+	"[json]": {
+		"editor.codeActionsOnSave": {
+			"source.fixAll.biome": "explicit"
+		}
 	}
 }
