--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -50,6 +50,7 @@
 		"tailwindcss": "^4.0.6",
 		"tw-animate-css": "^1.3.6",
 		"urql": "^5.0.1",
+		"wonka": "^6.3.5",
 		"zod": "^3.23.8",
 		"zustand": "^5.0.11"
 	},
