--- a/package.json
+++ b/package.json
@@ -1,46 +1,44 @@
 {
-	"name": "drivebase",
-	"version": "3.0.0",
-	"private": true,
-	"workspaces": [
-		"apps/api",
-		"apps/docs",
-		"apps/web",
-		"packages/*"
-	],
-	"scripts": {
-		"generate": "bun --filter web generate && bun --filter api codegen",
-		"dev": "bun --env-file=.env.local turbo run dev --parallel --filter=api --filter=web",
-		"build": "bun turbo run build --filter=web",
-		"dev:api": "bun --env-file=.env.local turbo run --filter=api dev",
-		"dev:web": "bun --env-file=.env.local turbo run --filter=web dev",
-		"test": "bun test --env-file=.env.test",
-		"check-types": "turbo run check-types",
-		"db:generate": "bun run --filter=@drivebase/db generate",
-		"db:migrate": "bun run --filter=@drivebase/db migrate",
-		"db:studio": "bun run --filter=@drivebase/db studio",
-		"release": "release-it",
-		"prepare": "husky",
-		"format": "biome format --write",
-		"check": "biome check --write"
-	},
-	"overrides": {
-		"yaml": "2.7.0"
-	},
-	"resolutions": {
-		"yaml": "2.7.0"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^2.3.14",
-		"@commitlint/cli": "^20.4.1",
-		"@commitlint/config-conventional": "^20.4.1",
-		"@release-it/bumper": "^7.0.5",
-		"@release-it/conventional-changelog": "^10.0.5",
-		"husky": "^9.1.7",
-		"lint-staged": "^16.2.7",
-		"release-it": "^19.2.4",
-		"turbo": "^2.8.10",
-		"yaml": "2.7.0"
-	},
-	"packageManager": "bun@1.3.5"
+  "name": "drivebase",
+  "version": "3.0.0",
+  "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
+  "scripts": {
+    "generate": "bun --filter web generate && bun --filter api codegen",
+    "dev": "bun --env-file=.env.local turbo run dev --parallel --filter=api --filter=web",
+    "build": "bun turbo run build --filter=web",
+    "dev:api": "bun --env-file=.env.local turbo run --filter=api dev",
+    "dev:web": "bun --env-file=.env.local turbo run --filter=web dev",
+    "test": "bun test --env-file=.env.test",
+    "check-types": "turbo run check-types",
+    "db:generate": "bun run --filter=@drivebase/db generate",
+    "db:migrate": "bun run --filter=@drivebase/db migrate",
+    "db:studio": "bun run --filter=@drivebase/db studio",
+    "release": "release-it",
+    "prepare": "husky",
+    "format": "biome format --write",
+    "check": "biome check --write"
+  },
+  "overrides": {
+    "yaml": "2.7.0"
+  },
+  "resolutions": {
+    "yaml": "2.7.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.3.14",
+    "@commitlint/cli": "^20.4.1",
+    "@commitlint/config-conventional": "^20.4.1",
+    "@release-it/bumper": "^7.0.5",
+    "@release-it/conventional-changelog": "^10.0.5",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
+    "release-it": "^19.2.4",
+    "turbo": "^2.8.10",
+    "yaml": "2.7.0"
+  },
+  "packageManager": "bun@1.3.5"
 }
