refactor: use VITE_PUBLIC_BASE_URL for web client config
This commit updates the web client configuration to use
`VITE_PUBLIC_BASE_URL` instead of `VITE_PUBLIC_API_URL`. This change
aligns the environment variable naming with its actual purpose:
specifying the base URL for API requests, while the GraphQL path is
appended automatically.

--- a/.env.example
+++ b/.env.example
@@ -16,8 +16,8 @@ JWT_SECRET=your-jwt-secret-minimum-32-characters-long-change-this-in-production
 ENCRYPTION_KEY=your-encryption-key-minimum-32-characters-long-change-this-in-production
 
 # Web client
-# Public API URL used by the web app.
-VITE_PUBLIC_API_URL=http://localhost:4000/graphql
+# Public base URL used by the web app (GraphQL path is appended automatically).
+VITE_PUBLIC_BASE_URL=http://localhost:4000
 
 # AI inference service (optional)
 AI_INFERENCE_URL=http://localhost:8010
