--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,7 @@
 		"API_BASE_URL",
 		"DEFAULT_OWNER_EMAIL",
 		"DEFAULT_OWNER_PASSWORD",
-		"VITE_PUBLIC_API_URL",
+		"VITE_PUBLIC_BASE_URL",
 		"AI_INFERENCE_URL"
 	],
 	"tasks": {
