chore: update relaese-it file

--- a/.release-it.json
+++ b/.release-it.json
@@ -17,7 +17,7 @@
 					{ "type": "fix", "section": "🐛 Fixes", "hidden": false },
 					{ "type": "style", "section": "🎨 Styling", "hidden": false },
 					{ "type": "docs", "section": "📝 Docs", "hidden": false },
-					{}
+					{ "type": "chore", "section": "🤖 Chore", "hidden": false }
 				]
 			},
 			"infile": "CHANGELOG.md",
